# spatial_knowledge

./: CMakeLists.txt  README.md  package.xml
config/: erl_locations.yaml  erl_object.yaml  erl_people.yaml
include/spatial_knowledge/: sk_client.h  sk_server.h
launch/: spatial_knowledge.launch
src/: person_at_node.cpp  sk_client.cpp  sk_map_node.cpp  sk_object_node.cpp  sk_people_node.cpp
